--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,10 @@ font-family: 'Open Sans', sans-serif;
 font-family: 'Montserrat', sans-serif;
 */
 
+body{
+    font-family: 'Open Sans', sans-serif;
+}
+
 .font-0{
     font-size: 0px;
     padding: 0px;
@@ -49,6 +53,14 @@ font-family: 'Montserrat', sans-serif;
     float: right
 }
 
+.titleItalic{
+    font-size: 1.8em;
+    font-weight: 400;
+    font-style: italic;
+    text-align: center;
+    padding: 15px 0 15px;
+    color: #1a2f5a;
+}
 
 .blocos{
     float: left;
@@ -59,6 +71,39 @@ font-family: 'Montserrat', sans-serif;
         margin-right: 0px;
 }
 
+.blocos > p{
+    font-size: 1em;
+    width: 205px;
+    line-height: 150%;
+}
+
+.blocos > .img{
+    height: 188px;
+}
+
+
 #box-blocks{
-    background: url('../images/bg-blocos.jpg')  50px center no-repeat
+    background: url('../images/bg-blocos.jpg')  top center no-repeat
+}
+
+
+.bg-gray{
+    background: #f1f1f1;
+}
+
+#bloco-video{
+    padding: 35px 0 45px;
+}
+
+#bloco-video > article > div > div > h1{
+    font-size: 2em;
+    font-weight: 600;
+    color: #1c5eaa;
+    padding-top: 0px;
+    margin-top: 0px;
+}
+
+#bloco-video > article > div > div > p{
+    font-size: 1.3em;
+    line-height: 170%;
 }
