--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ body{
 
 
 #box-blocks{
-    background: url('../images/bg-blocos.jpg')  top center no-repeat
+    background: url('../images/bg-blocos.jpg')  0px 74px no-repeat
 }
 
 
@@ -104,6 +104,139 @@ body{
 }
 
 #bloco-video > article > div > div > p{
-    font-size: 1.3em;
-    line-height: 170%;
+    font-size: 1.2em;
+    line-height: 200%;
+}
+
+.block-image{
+    width: 200px;
+    padding:  30px 0 30px;
+    float: left;
+    text-align: center;
+    margin-right: 120px;
+}
+
+.block-image:last-child{
+    margin-right: 0px;
+}
+
+.block-image > p{
+    font-size: 1.1em;
+}
+
+.circle{
+    background: #1a5faa;
+    padding:  20px;
+    width: 130px;
+    height: 130px;
+    border:hidden 15px #000000;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    margin: auto;
+}
+
+.circle > img{
+    max-width: 100%;
+}
+
+.block-image > h2{
+     color: #1a5faa;
+}
+
+.form-group > label{
+    display: inline-block;
+    width: 100%;
+    font-weight: 400;
+    text-align: center;
+    color:  #7f7070;
+}
+
+.form-control{
+    background: #f1f1f1;
+}
+
+.title{
+    font-size: 2em;
+    font-weight: 600;
+    color: #1c5eaa;
+}
+
+.icons{
+    margin-bottom: 18px;
+}
+
+.icons>h2{
+     color: #1c5eaa;
+     font-size: 1.5em;
+     margin-top: 12px;
+     float:left;
+}
+
+.icon{
+    width: 43px;
+    height: 43px;
+    float: left;
+    margin-right: 15px;
+}
+
+.icon > img{
+    max-width: 100%;
+}
+
+/*galeria home*/
+.da-thumbs {
+    list-style: none;
+    width: 100%;
+    position: relative;
+    margin: 20px auto;
+    padding: 0;
+}
+.da-thumbs li {
+    float: left;
+    margin:10px 5px;
+    background: #fff;
+    position: relative;
+}
+.da-thumbs li a,
+.da-thumbs li a img {
+    display: block;
+    position: relative;
+}
+.da-thumbs li a {
+    overflow: hidden;
+}
+.da-thumbs li a div {
+    position: absolute;
+    background: #ffd600;
+    background: rgba(26,95,170,0.4);
+    width: 100%;
+    height: 100%;
+}
+/*.da-thumbs li a div span {
+    display: block;
+    padding: 10px 0;
+    margin: 40px 20px 20px 20px;
+    text-transform: uppercase;
+    font-weight: normal;
+    color: rgba(255,255,255,0.9);
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
+    border-bottom: 1px solid rgba(255,255,255,0.5);
+    box-shadow: 0 1px 0 rgba(0,0,0,0.1), 0 -10px 0 rgba(255,255,255,0.3);
+}*/
+
+
+#newsletter{
+    height: 278px;
+    background: url('../images/bg-newsletter.jpg') center;
+}
+
+#t-yellow{
+    font-size: 1.5em;
+    font-weight: bold;
+    color:#fdc500;
+}
+
+.white{
+    color: white;
 }
