--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ body{
 
 #logo2{
     width: 200px;
-    height: 150px;
+    margin-top: 10px;
 }
 
 #logo{
@@ -46,6 +46,10 @@ body{
     background: transparent;
     border: none;
     padding-top: 35px;
+}
+
+#caixaBtn2{
+    padding-top: 10px;
 }
 
 .navbar-default .navbar-nav > li > a {
